# dice-analyzator

./: .gitignore  README.md  pyproject.toml  selectors.json
dice_predictor_analyzer/: __init__.py  __main__.py  analyzers.py  collector.py  forecast.py  gui.py  main.py  model.py  parser.py  statistics.py  storage.py  utils.py  visualization.py  weights.py
tests/: test_forecast.py  test_rondo.py
