[project]
name = "dice-predictor-analyzer"
version = "0.2.0"
description = "Desktop Selenium analyzer for Bettery Rondo/Twist sum history and adaptive forecasting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "selenium>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dice-predictor-analyzer = "dice_predictor_analyzer.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dice_predictor_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
